@@ -1,3 +1,8 @@
+2017-04-06 belangeo <belangeo@gmail.com>
+
+    * Added "speed" argument to Seq object. Useful to create continuous time
+      deceleration or acceleration.
+
 2017-03-31 belangeo <belangeo@gmail.com>
 
     * Upgraded version number to 0.8.5.
